--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-    "name": "node-example"
-  , "version": "0.0.1"
+    "name": "Essence-of-CoffeeScript-Syntax-Shortcuts"
+  , "version": "0.8.0"
   , "dependencies": 
     {
       "express": "*"
-    , "coffee-script": "*"  
+    , "coffee-script": "*"
+    , "logfmt": "*"
     }
   , "devDependencies": 
     {
-      "jade": "0.27.x"
-    , "stylus": "0.32.x"
+      "jade": "1.3.1"
+    , "stylus": "0.44.0"
     }
 
   , "engines": {
       "node": "0.10"
-    , "npm": "1.2.12"
+    , "npm": "1.4.3"
     }
 }
