--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
-    "name": "Essence-of-CoffeeScript-Syntax-Shortcuts"
-  , "version": "0.8.0"
-  , "dependencies": 
-    {
-      "express": "*"
-    , "coffee-script": "*"
-    , "logfmt": "*"
-    }
-  , "devDependencies": 
-    {
-      "jade": "1.3.1"
-    , "stylus": "0.44.0"
-    }
-
-  , "engines": {
-      "node": "0.10"
-    , "npm": "1.4.3"
-    }
+  "name": "Essence-of-CoffeeScript-Syntax-Shortcuts",
+  "version": "0.8.0",
+  "dependencies": {
+    "express": "*",
+    "coffee-script": "*",
+    "logfmt": "*"
+  },
+  "devDependencies": {
+    "jade": "^1.3.1",
+    "stylus": "0.44.0"
+  },
+  "engines": {
+    "node": "0.10",
+    "npm": "1.4.3"
+  }
 }
